--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="grey_500">#9E9E9E</color>
 
 
-    <color name="toolbarIconColor">#FFFFFF</color>
+    <color name="toolbarIconColor">#FDF6D6</color>
 
     <color name="loginPageBackgroundColor">#FFFFFF</color>
 
