--- a/src/main/res/layout/fragment_logbook_full.xml
+++ b/src/main/res/layout/fragment_logbook_full.xml
@@ -5,42 +5,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#FDFDFE"
+    android:background="#d4e6f1"
     tools:context=".Fragments.Full_Logbook_Fragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/app_bar"
-            style="@style/ThemeOverlay.MyNoTitleActivity"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="@string/app_name"
-            app:navigationIcon="@drawable/ic_menu_1"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
-<!--    <EditText-->
-<!--        android:id="@+id/et"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:padding="8dp" />-->
-
-<!--    <EditText-->
-<!--        android:id="@+id/etd"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:padding="8dp" />-->
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_new"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Entry" />
+        android:layout_gravity="start"
+        android:text="New logbook entry"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/l1"
@@ -60,15 +35,12 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <LinearLayout
-        android:id="@+id/l2"
+        android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-<!--        android:visibility="gone"-->
+        android:orientation="vertical"
+        android:background="#d4e6f1">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_logbook_list"
