--- a/src/main/res/layout/toolbar_main.xml
+++ b/src/main/res/layout/toolbar_main.xml
@@ -1,4 +1,4 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary" />
+    android:background="@drawable/background_selector_gradient_blue" />
