--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
 
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">#212121</item>
-        <item name="colorPrimaryVariant">#000000</item>
+        <item name="colorPrimary">#2962FF</item>
+        <item name="colorPrimaryVariant">#2962FF</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#2962FF</item>
         <item name="colorSecondaryVariant">#0039CB</item>
@@ -12,9 +12,9 @@
         <item name="colorError">#F44336</item>
         <item name="colorOnError">#FFFFFF</item>
         <item name="colorSurface">#FFFFFF</item>
-        <item name="colorOnSurface">#212121</item>
+        <item name="colorOnSurface">#2962FF</item>
         <item name="android:colorBackground">@color/background</item>
-        <item name="colorOnBackground">#212121</item>
+        <item name="colorOnBackground">#2962FF</item>
     </style><color name="background">#FAFAFA</color>
 
 
