--- a/src/main/res/layout/fragment_logbook_full.xml
+++ b/src/main/res/layout/fragment_logbook_full.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#d4e6f1"
+    android:background="#ffffff"
     tools:context=".Fragments.Full_Logbook_Fragment">
 
 
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#d4e6f1">
+        android:background="@drawable/swirl">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_logbook_list"
