--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -26,9 +26,14 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/temperaturetext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:textAlignment="textStart"
+                    android:textSize="8sp"/>
             <TextView
                 android:id="@+id/relativehumiditytext"
                 android:layout_width="wrap_content"
@@ -36,7 +41,6 @@
                 android:layout_marginTop="1dp"
                 android:textAlignment="textStart"
                 android:textSize="8sp" />
-
             <TextView
                 android:id="@+id/absolutehumiditytext"
                 android:layout_width="wrap_content"
@@ -44,13 +48,7 @@
                 android:layout_marginTop="1dp"
                 android:textAlignment="textStart"
                 android:textSize="8sp" />
-            <TextView
-                android:id="@+id/temperaturetext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:textAlignment="textStart"
-                android:textSize="8sp"/>
+
             <TextView
                 android:id="@+id/dewpointtext"
                 android:layout_width="wrap_content"
@@ -61,18 +59,21 @@
                 android:textSize="8sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-
         </androidx.appcompat.widget.Toolbar>
-
     </com.google.android.material.appbar.AppBarLayout>
-
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/main_fragment">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="108dp"
+            android:layout_height="83dp"
+            app:srcCompat="@drawable/flytrax_logo_icon"
+            android:layout_gravity="center"/>
     </FrameLayout>
 
 </LinearLayout>
