--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -19,44 +19,47 @@
             style="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/app_name"
-            app:navigationIcon="@drawable/ic_menu_1" >
+            app:navigationIcon="@drawable/ic_menu_1"
+           >
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/temperaturetext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:textAlignment="textStart"
-                    android:textSize="8sp"/>
-            <TextView
-                android:id="@+id/relativehumiditytext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:textAlignment="textStart"
-                android:textSize="8sp" />
-            <TextView
-                android:id="@+id/absolutehumiditytext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:textAlignment="textStart"
-                android:textSize="8sp" />
+                    android:textSize="8sp" />
 
-            <TextView
-                android:id="@+id/dewpointtext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="1dp"
-                android:textAlignment="textStart"
-                android:textSize="8sp" />
+                <TextView
+                    android:id="@+id/relativehumiditytext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:textAlignment="textStart"
+                    android:textSize="8sp" />
+
+                <TextView
+                    android:id="@+id/absolutehumiditytext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:textAlignment="textStart"
+                    android:textSize="8sp" />
+
+                <TextView
+                    android:id="@+id/dewpointtext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="1dp"
+                    android:textAlignment="textStart"
+                    android:textSize="8sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.Toolbar>
