--- a/src/main/res/drawable/background_selector_gradient.xml
+++ b/src/main/res/drawable/background_selector_gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#159957"
-        android:endColor="#155799"
+        android:startColor="#FFFFFF"
+        android:endColor="#FF5722"
         android:angle="45"/>
 </shape>
 
