--- a/src/main/res/layout/fragment_logbook_full.xml
+++ b/src/main/res/layout/fragment_logbook_full.xml
@@ -39,9 +39,8 @@
         android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/swirl">
-
+        android:orientation="vertical">
+<!--        android:background="@drawable/swirl"-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_logbook_list"
             android:layout_width="match_parent"
