--- a/src/main/res/layout/full_logbook_list_item.xml
+++ b/src/main/res/layout/full_logbook_list_item.xml
@@ -1,57 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="10sp"
-    android:layout_marginEnd="10sp"
-    >
-<FrameLayout
+    android:layout_marginEnd="10sp">
 
-    android:layout_marginTop="15sp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<com.google.android.material.card.MaterialCardView
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardMaxElevation="7dp"
-    card_view:cardElevation="5dp"
-    card_view:cardPreventCornerOverlap="false"
-    app:contentPaddingBottom="0dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="5dp"
-    android:layout_marginBottom="10dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:checkable="true"
-    >
+    <FrameLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15sp">
+
+        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:checkable="true"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:contentPaddingBottom="0dp"
+            card_view:cardCornerRadius="5dp"
+            card_view:cardElevation="5dp"
+            card_view:cardMaxElevation="7dp"
+            card_view:cardPreventCornerOverlap="false"
+            card_view:cardUseCompatPadding="true">
+
             <LinearLayout
                 android:id="@+id/list_root"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/background_selector_gradient"
                 android:clickable="true"
                 android:focusable="true"
-                android:orientation="vertical"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:background="@drawable/background_selector_gradient"
+                android:orientation="vertical"
                 android:padding="10dp">
 
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_column="1"
+                            android:text=""></TextView>
+                        <TextView
+                            android:id="@+id/txt_date"
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:layout_column="2"
+                            android:text="Date"
+                            android:textAppearance="?attr/textAppearanceSubtitle2"
+                            android:textColor="@android:color/black"
+                            android:textSize="11sp"
+                            android:textStyle="normal" ></TextView>
+                    </TableRow>
+
+                </TableLayout>
 
                 <TextView
                     android:id="@+id/fname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingTop="20dp"
                     android:text="First Name"
                     android:textAllCaps="true"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
                     android:textColor="@android:color/black"
                     android:textSize="14sp"
-                    android:textStyle="normal"
-                    android:paddingTop="20dp"/>
+                    android:textStyle="normal" />
 
                 <TextView
                     android:id="@+id/lname"
@@ -59,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:text="Last Name"
                     android:textAllCaps="true"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
                     android:textColor="@android:color/black"
                     android:textSize="14sp"
                     android:textStyle="normal" />
@@ -70,8 +98,7 @@
                     android:layout_marginTop="4dp"
                     android:text="Email"
                     android:textAlignment="textStart"
-                    android:textAllCaps="true"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
                     android:textSize="14sp" />
 
                 <TextView
@@ -84,46 +111,52 @@
                     android:textAppearance="?attr/textAppearanceSubtitle2" />
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:layout_gravity="end|bottom"
-        android:orientation="horizontal">
-
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_Edit"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|bottom"
-                    android:text="Edit"
-                    />
+                    android:orientation="horizontal"
+                    android:padding="2dp">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_Delete"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|bottom"
-                    android:text="Delete"/>
+                    <!--        <EditText-->
+                    <!--            android:layout_width="wrap_content"-->
+                    <!--            android:layout_height="match_parent"-->
+                    <!--            android:text="Test"></EditText>-->
 
-    </LinearLayout>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_Edit"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|bottom"
+                        android:text="Edit" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_Delete"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|bottom"
+                        android:text="Delete" />
+
+                </LinearLayout>
 
             </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
-</FrameLayout>
-<!--    imge on top of cardview with offset goes here-->
+        </com.google.android.material.card.MaterialCardView>
+    </FrameLayout>
+    <!--    imge on top of cardview with offset goes here-->
 
     <ImageView
-        android:fadingEdgeLength="5dp"
-        android:elevation="20dp"
-        android:layout_width="90sp"
-        android:layout_height="50sp"
-        android:layout_marginStart="20sp"
         android:id="@+id/profileImg"
-        android:background="#9E9E9E"/>
+        android:layout_width="40sp"
+        android:layout_height="30sp"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="10dp"
+        android:background="#7AF2F2F7"
+        android:elevation="20dp"
+        android:fadingEdgeLength="5dp"
+        app:srcCompat="@drawable/thzepczr8y" />
 </FrameLayout>
 
 
