--- a/src/main/res/layout/full_logbook_list_item.xml
+++ b/src/main/res/layout/full_logbook_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10sp"
@@ -12,9 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15sp">
 
-        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,16 +23,16 @@
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:contentPaddingBottom="0dp"
-            card_view:cardCornerRadius="5dp"
-            card_view:cardElevation="5dp"
-            card_view:cardMaxElevation="7dp"
-            card_view:cardPreventCornerOverlap="false"
-            card_view:cardUseCompatPadding="true">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardMaxElevation="7dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:id="@+id/list_root"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="157dp"
                 android:background="@drawable/background_selector_gradient"
                 android:clickable="true"
                 android:focusable="true"
@@ -54,6 +53,7 @@
                             android:layout_height="wrap_content"
                             android:layout_column="1"
                             android:text=""></TextView>
+
                         <TextView
                             android:id="@+id/txt_date"
                             android:layout_width="150dp"
@@ -63,86 +63,122 @@
                             android:textAppearance="?attr/textAppearanceSubtitle2"
                             android:textColor="@android:color/black"
                             android:textSize="11sp"
-                            android:textStyle="normal" ></TextView>
+                            android:textStyle="normal"></TextView>
                     </TableRow>
 
                 </TableLayout>
 
-                <TextView
-                    android:id="@+id/fname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="20dp"
-                    android:text="First Name"
-                    android:textAllCaps="true"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    android:textStyle="normal" />
-
-                <TextView
-                    android:id="@+id/lname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Last Name"
-                    android:textAllCaps="true"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    android:textStyle="normal" />
-
-                <TextView
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="Email"
-                    android:textAlignment="textStart"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="Phone"
-                    android:textAlignment="textStart"
-                    android:textAppearance="?attr/textAppearanceSubtitle2" />
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|bottom"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="top|start"
                     android:orientation="horizontal"
                     android:padding="2dp">
 
-                    <!--        <EditText-->
-                    <!--            android:layout_width="wrap_content"-->
-                    <!--            android:layout_height="match_parent"-->
-                    <!--            android:text="Test"></EditText>-->
+                    <TextView
+                        android:id="@+id/brief"
+                        android:layout_width="186dp"
+                        android:layout_height="13dp"
+                        android:text="Brief"
+                        android:textAllCaps="true"
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        android:textColor="@android:color/black"
+                        android:textSize="12sp"
+                        android:textStyle="normal"
+                        app:layout_constraintHorizontal_bias="0.009"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.021" />
 
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_Edit"
-                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                    <TextView
+                        android:id="@+id/fname"
+                        android:layout_width="110dp"
+                        android:layout_height="19dp"
+                        android:text="First Name"
+                        android:textAllCaps="true"
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
+                        android:textStyle="normal"
+                        app:layout_constraintStart_toStartOf="@+id/brief"
+                        app:layout_constraintTop_toBottomOf="@+id/brief"
+                        app:layout_constraintVertical_bias="0.128" />
+
+                    <TextView
+                        android:id="@+id/lname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end|bottom"
-                        android:text="Edit" />
+                        android:text="Last Name"
+                        android:textAllCaps="true"
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
+                        android:textStyle="normal"
+                        app:layout_constraintStart_toStartOf="@+id/fname"
+                        app:layout_constraintTop_toBottomOf="@+id/fname" />
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_Delete"
-                        style="@style/Widget.MaterialComponents.Button.TextButton"
+
+                    <TextView
+                        android:id="@+id/email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end|bottom"
-                        android:text="Delete" />
+                        android:text="Email"
+                        android:textAlignment="textStart"
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/phone" />
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Phone"
+                        android:textAlignment="textStart"
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        app:layout_constraintStart_toStartOf="@+id/lname"
+                        app:layout_constraintTop_toBottomOf="@+id/lname" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="135dp"
+                        android:layout_height="41dp"
+                        android:layout_marginEnd="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btn_Edit"
+                            style="@style/Widget.MaterialComponents.Button.TextButton"
+                            android:layout_width="60dp"
+                            android:layout_height="26dp"
+
+                            android:text="Edit"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btn_Delete"
+                            style="@style/Widget.MaterialComponents.Button.TextButton"
+                            android:layout_width="60dp"
+                            android:layout_height="26dp"
+
+                            android:text="Delete"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/btn_Edit"
+                            app:layout_constraintHorizontal_bias="0.92"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
+
+
+
+
+
+
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
     <!--    imge on top of cardview with offset goes here-->
