--- a/src/main/res/layout/fragment_quick__log__update_.xml
+++ b/src/main/res/layout/fragment_quick__log__update_.xml
@@ -7,8 +7,8 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/txt_updateEntry"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/new_update_page" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
