--- a/src/main/res/layout/full_logbook_list_item.xml
+++ b/src/main/res/layout/full_logbook_list_item.xml
@@ -22,12 +22,12 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:contentPaddingBottom="0dp"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
             app:cardMaxElevation="7dp"
             app:cardPreventCornerOverlap="false"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            app:contentPaddingBottom="0dp">
 
             <LinearLayout
                 android:id="@+id/list_root"
@@ -46,24 +46,34 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent">
+
 
                         <TextView
+                            android:id="@+id/txt_brief"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
-                            android:text=""></TextView>
+                            android:paddingTop="5dp"
+                            android:text="Brief"
+                            android:textAlignment="viewStart"
+                            android:textAllCaps="true"
+                            android:textAppearance="?attr/textAppearanceSubtitle2"
+                            android:textColor="@android:color/black"
+                            android:textSize="12sp"
+                            android:textStyle="normal" />
 
                         <TextView
                             android:id="@+id/txt_date"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_column="2"
                             android:text="Date"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
                             android:textColor="@android:color/black"
                             android:textSize="11sp"
-                            android:textStyle="normal"></TextView>
+                            android:textStyle="normal"
+                            />
                     </TableRow>
 
                 </TableLayout>
@@ -74,21 +84,6 @@
                     android:layout_gravity="top|start"
                     android:orientation="horizontal"
                     android:padding="2dp">
-
-                    <TextView
-                        android:id="@+id/txt_brief"
-                        android:layout_width="186dp"
-                        android:layout_height="13dp"
-                        android:text="Brief"
-                        android:textAllCaps="true"
-                        android:textAppearance="?attr/textAppearanceSubtitle2"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp"
-                        android:textStyle="normal"
-                        app:layout_constraintHorizontal_bias="0.009"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.021" />
 
 
                     <TextView
@@ -101,9 +96,9 @@
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
                         android:textStyle="normal"
-                        app:layout_constraintStart_toStartOf="@+id/brief"
-                        app:layout_constraintTop_toBottomOf="@+id/brief"
-                        app:layout_constraintVertical_bias="0.128" />
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/lname"
@@ -141,41 +136,38 @@
                         app:layout_constraintTop_toBottomOf="@+id/lname" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginBottom="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btn_Edit"
-                            style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:text="Edit"
-                            android:textSize="14dp"
-                            android:layout_width="60dp"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:id="@+id/btn_Delete"
+                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Delete"
+                            android:textSize="12dp"
+                            app:layout_constraintEnd_toStartOf="@+id/btn_Edit"
+                            app:layout_constraintStart_toStartOf="parent" />
 
                         <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btn_Delete"
-                            style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:text="Delete"
-                            android:textSize="14dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
+                            android:id="@+id/btn_Edit"
+                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Edit"
+                            android:textSize="12dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
-
-
-
-
 
 
         </com.google.android.material.card.MaterialCardView>
