--- a/src/main/res/layout/full_logbook_list_item.xml
+++ b/src/main/res/layout/full_logbook_list_item.xml
@@ -43,6 +43,22 @@
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <TextView
+                            android:id="@+id/txt_co"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_column="2"
+                            android:text="company"
+                            android:textAppearance="?attr/textAppearanceSubtitle2"
+                            android:textColor="@android:color/black"
+                            android:textSize="11sp"
+                            android:textStyle="normal"
+                            />
+
+                    </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -62,6 +78,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
                             android:textStyle="normal" />
+
 
                         <TextView
                             android:id="@+id/txt_date"
@@ -138,9 +155,6 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginBottom="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
 
